--- a/compas_bias.ipynb
+++ b/compas_bias.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oUr7IW1gqQpqFj8soAuGIT6pI4wyz1x7",
-      "authorship_tag": "ABX9TyMSwCPdzRZI3d9lis2zrNnH",
+      "authorship_tag": "ABX9TyMvEJeWF5QH3oT1JY8sWqYj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,6 +93,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Evaluación del Sesgo en el Algoritmo COMPAS\n",
+        "\n",
+        "## Introducción\n",
+        "\n",
+        "En este notebook, se llevará a cabo un análisis exhaustivo del sesgo presente en el algoritmo COMPAS (Correctional Offender Management Profiling for Alternative Sanctions). COMPAS es una herramienta ampliamente utilizada en el sistema de justicia penal de los Estados Unidos para evaluar la probabilidad de reincidencia de los acusados. Esta herramienta proporciona puntuaciones de riesgo que son utilizadas por jueces y oficiales de libertad condicional para tomar decisiones informadas sobre la detención, sentencia y liberación de los acusados.\n",
+        "\n",
+        "### Contexto del Algoritmo COMPAS\n",
+        "\n",
+        "COMPAS utiliza una serie de factores, incluyendo datos demográficos y antecedentes penales, para generar una puntuación de riesgo (campo  * decile_score* en el dataset) que varía entre 1 y 10. Este puntuación indica la probabilidad de que un individuo cometa un nuevo delito en el futuro. Sin embargo, estudios recientes han planteado preocupaciones significativas sobre la equidad de COMPAS, señalando que el algoritmo puede estar sesgado en contra de ciertos grupos demográficos, especialmente los afroamericanos.\n",
+        "\n",
+        "### Objetivo del Análisis\n",
+        "\n",
+        "El objetivo principal de este análisis es evaluar el sesgo racial en el algoritmo COMPAS, específicamente cómo afecta a los individuos afroamericanos en comparación con otros grupos demográficos. Tambien se compara e investiga otro posible sesgo existente dentro de la feature de género o \"sex\" en el dataset. Para lograr esto, se llevarán a cabo las siguientes tareas:\n",
+        "\n",
+        "1. **Exploración y transformación de Datos**: Se analizará el conjunto de datos de manera visual y estadística para comprender su estructura y características. incluye drop de ciertas variables no útiles, codificación de variables y establecimiento de un threshold para las probabilidades otrogadas por COMPAS. De esta forma se logra una nueva columna *compas_recid* binaria para comparar con el ground truth de reincidencia (*is_recid*).\n",
+        "2. **Modelo *custom***: Crea y entrena una pipeline con la que depués se predice. Esta pipeline incluye un modelo ensamblado binario. Las predicciones de este modelo se usan para comparar y evaluar el sesgo de COMPAS.\n",
+        "3. **Cálculo de Métricas de Rendimiento**: Se evaluará la precisión, recall, F1-score, y otras métricas del modelo COMPAS y del custom y se compararán.\n",
+        "4. **Análisis de la Matriz de Confusión**: Se compararán las tasas de falsos positivos (FP) y falsos negativos (FN) entre diferentes grupos raciales y entre ambos modelos.\n",
+        "5. **Curvas ROC**: Se generarán y analizarán las curvas ROC para distintos grupos demográficos.\n",
+        "6. **Identificación de Disparidades**: Se identificarán y cuantificarán las disparidades en las tasas de error de predicción entre los grupos demográficos. Y entre los géneros.\n",
+        "7. **Recomendaciones**: Se proporcionarán recomendaciones sobre cómo abordar los sesgos identificados en el modelo COMPAS y posibles siguientes pasos.\n",
+        "\n",
+        "\n",
+        "### Estructura del Notebook\n",
+        "\n",
+        "1. **Carga de Datos y Preprocesamiento**: Se importará el conjunto de datos de COMPAS y se realizarán las transformaciones necesarias para su análisis.\n",
+        "2. **Exploración de Datos**: Se visualizarán y describirán las características principales del conjunto de datos.\n",
+        "3. **Entrenamiento de Modelos**: Se entrenará un modelo \"custom\" y se comparará su rendimiento con el modelo COMPAS.\n",
+        "4. **Evaluación de Sesgo**: Se realizarán análisis detallados de las métricas de rendimiento y se evaluará el sesgo racial.\n",
+        "5. **Conclusiones y Recomendaciones**: Se discutirán los resultados obtenidos y se proporcionarán recomendaciones para abordar los sesgos identificados.\n",
+        "\n",
+        "A lo largo de este notebook, no solo se buscará identificar los sesgos presentes, sino también proporcionar un marco para mitigarlos, asegurando así que las herramientas de evaluación de riesgos sean más justas y equitativas.\n"
+      ],
+      "metadata": {
+        "id": "UFEgGCWHjcuJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -104,7 +144,7 @@
       "metadata": {
         "id": "tA_Q544pRyXE"
       },
-      "execution_count": 70,
+      "execution_count": 182,
       "outputs": []
     },
     {
